# files-preview-python-api

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: license_go.yml  license_python.yml
src/: main.py
tests/: Kunde enthus TEST GmbH hat eine Bestellung über enthus connect getätigt(1).msg  WG_ _Manuelle Freigabe notwendig_ Kunde MCL TEST GmbH hat eine Bestellung über myMCL getätigt.msg  asd.msg
